[package]
name = "ltl-windows"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.26.2"
egui = "0.26.2"
egui_extras = "0.26.2"
env_logger = "0.11.3"
libmpv = { git = "https://github.com/ParadoxSpiral/libmpv-rs", rev = "3e6c389" }
